- P4A_Mask's default icon size was changed from 48 to 32
- P4A_Table_Navigation_Bar's current page indicator was switched from a
  P4A_Label to a P4A_Box because the P4A_Label has to be bundled with a
  P4A_Field
- a nice shadow effect was added to system messages and tooltips if
  not on handheld or internet explorer browsers
- jQuery::UI was updated to 1.5

3.0.0-rc4
- a default submit button was added to P4A default HTML form
  (hidden and without events) to solve the
  enter key bug (propagating event to the first button)
- mouseover on system messages pause the fadeOut timer giving
  more time to read the messages
- P4A_Table_Col::setHeader() method was marked deprecated
- P4A_Table_Rows and P4A_Table_Col now trigger the onclick event 
  (in addition to beforeclick and afterclick) useful if you don't
  want the table to move your linked P4A_Data_Source
- P4A_Table::showTitleBar() method was removed because obsolete
- P4A_Table_Rows::disable() won't disable table's "action cols"
- A P4A_Table's caption small rendering bug with safari was solved
- P4A_Table's CSS was modified for a better readability
- jQuery was updated to 1.2.6
- P4A_Redirect_To_Url() global method was added, useful if you want to
  redirect the user outside P4A

3.0.0-rc3
- file upload check and error reporting was enhanced
- a bug with file download within a non-ajax environment was solved
- Zend Framework was updated to 1.5.2
- P4A_Redirect_To_File() global function now checks if the file really
  exists within P4A_UPLOADS_DIR, otherwise throws a P4A_Exception
- P4A_Tab_Pane's pages' labels are now auto translated on getAsString()
- P4A_Field::getAsDate() does not set the field "readonly" anymore thus
  now dates can you written by hand too
- jQuery was updated to 1.2.5
- jQuery::UI::datepicker javascript file was replaced with the packed one
  which is only 20kb instead of 60kb
- folder_home icon was changed with a new one that degrades to GIF in a
  better way